--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,7 +7,9 @@
 }
 
 html {
-    // This defines what 1rem is    /100 %
+    // This defines what 1rem is 16 = 100 %
+    // => 62.5% of 16px = 10px
+    // => all website will have font 10px
     font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5% 
 
     @include respond(tab-land) { // width < 992px?
